# veeam-cli

./: .gitignore  README.md  pyproject.toml  swagger_v1.3.json
.bakufu/: accounts.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  INSTALL.md  INSTALL_BINARY.md  SKILL_CONVENTIONS.md  UPDATES.md  skills.md
schemas/: RBAC_API_REFERENCE.md  compare_schemas.py  extract_rbac_endpoints.py  rbac_endpoints_details.txt  swagger_latest_check.json  swagger_v1.3-rev1.json  veeam_api_schema.json
scripts/: generate_skills.py  install.ps1  install.sh  release.sh  setup-completion.sh  sync_skills_from_swagger.py
skills/: skills.json
skills/bakufu-active-directory-domains/: SKILL.md
skills/bakufu-agents/: SKILL.md
skills/bakufu-automation/: SKILL.md
skills/bakufu-backup-browsers/: SKILL.md
skills/bakufu-backup-objects/: SKILL.md
skills/bakufu-backups/: SKILL.md
skills/bakufu-cloud-browser/: SKILL.md
skills/bakufu-cloud-credentials-add/: SKILL.md
skills/bakufu-configuration-backup/: SKILL.md
skills/bakufu-connection/: SKILL.md
skills/bakufu-credentials/: SKILL.md
skills/bakufu-data-integration-api/: SKILL.md
skills/bakufu-deployment/: SKILL.md
skills/bakufu-encryption/: SKILL.md
skills/bakufu-failback/: SKILL.md
skills/bakufu-failover/: SKILL.md
skills/bakufu-general-options/: SKILL.md
skills/bakufu-global-exclusions/: SKILL.md
skills/bakufu-inventory-browser/: SKILL.md
skills/bakufu-job-by-name/: SKILL.md
skills/bakufu-job-create/: SKILL.md
skills/bakufu-job-schedule-update/: SKILL.md
skills/bakufu-jobs/: SKILL.md
(+207 files in other folders)
