[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "bakufu-cli"
dynamic = ["version"]
description = "Multi-layer admin CLI for Veeam Backup & Replication"
authors = [{ name = "Anthony Spiteri" }]
requires-python = ">=3.9"
dependencies = [
  "keyring>=25.0.0",
]

[project.scripts]
bakufu = "bakufu_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.1.0"
